# aModels

./: .env.gitea  .gitignore  .gitmodules  ARCHITECTURE_ANALYSIS.md  CHANGELOG_SGMI_LOADING.md  COMMIT_MESSAGE_NEXT_STEPS.md  COMMIT_MESSAGE_SGMI.md  FOLDER_STRUCTURE_REVIEW.md  INTEGRATION_EXCELLENCE_IMPLEMENTATION_STATUS.md  INTEGRATION_REVIEW_DMS_CATALOG_EXTRACT.md  LNN_GNN_NPU_REVIEW.md  Makefile  Makefile.services  NEXT_STEPS_IMPLEMENTATION.md  ORGANIZATION_10_10.md  PERFORMANCE_IMPROVEMENTS.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  QUICKSTART.md  QUICK_START.md  README.md  REDUNDANT_SCRIPTS_ANALYSIS.md  SCRIPTS_REORGANIZATION_PLAN.md  SCRIPTS_SUMMARY.md  SERVICES.md  STRUCTURE_RATING_2024.md  SYSTEM_STARTUP_SUMMARY.md  go.mod  go.sum  go.work  go.work.example  go.work.sum  start-all-services.plan.md  test_perplexity.sh  test_perplexity_full.sh  test_perplexity_next_level.sh
services/agentflow/: Dockerfile  INTEGRATION.md  Makefile.frontend  go.mod  go.sum  pyproject.toml
services/agentflow/cmd/flow-run/: main.go
services/agentflow/flows/processes/: document_training_export.json  localai_training_pipeline.json  sample_reconciliation.json  search_reindex_pipeline.json  sgmi_controlm_pipeline.json
services/agentflow/flows/standards/: sample_policy.json
services/agentflow/frontend/: jest.config.js
services/agentflow/frontend/src/: App.css
services/agentflow/runner/: config.go  runner.go
services/agentflow/service/: config.py  deepagents.py  dependencies.py  main.py  requirements.txt
services/agentflow/store/: sgmi_view_summary.json
(+2907 files in other folders)
